--- a/repd/style.css
+++ b/repd/style.css
@@ -52,12 +52,12 @@ table {
     margin-top: 20px;
 }
 th, td {
-    border: 1px solid #ddd;
+    border: 1px solid black;
     padding: 8px;
     text-align: left;
 }
 th {
-    background-color: #f2f2f2;
+    background-color: #000000;
 }
 .message {
     margin: 10px 0;
