--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ button {
     transition: 0.3s;
     margin: 10px;
 }
-
+h1 h2 h3 h4 h5 h6 {
+    font-family: "Segoe UI";
+}
 button:hover {
     color: black;
     background-color: green;
