--- a/ksharp/styles.css
+++ b/ksharp/styles.css
@@ -17,7 +17,7 @@ body {
 
 .sidebar {
     width: 30%;
-    background-color: #007BFF; /* Blue color */
+    background-color: #0073b7; /* Blue color */
     display: flex;
     justify-content: center;
     align-items: center;
