--- a/ksharp/styles.css
+++ b/ksharp/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .sidebar {
-    background-color: #006baa; /* Blue color */
+    background-color: #333333; /* Blue color */
     justify-content: left;
     align-items: center;
     padding: 20px;
